--- a/EventDirector/NewEventWindow.xaml
+++ b/EventDirector/NewEventWindow.xaml
@@ -8,9 +8,9 @@
         Title="Window1" Height="210" Width="250" ResizeMode="NoResize">
     <Grid>
         <Label Content="Name" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
+        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
         <Label Content="Date" HorizontalAlignment="Left" Margin="20,65,20,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="date" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top" Width="200"/>
+        <DatePicker x:Name="datePicker" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top" Width="200"/>
         <Button Content="Submit" HorizontalAlignment="Left" Margin="20,0,0,25" VerticalAlignment="Bottom" Width="75" Click="submit_Click"/>
         <Button Content="Cancel" HorizontalAlignment="Right" Margin="0,0,20,25" VerticalAlignment="Bottom" Width="75" Click="cancel_Click"/>
     </Grid>
