--- a/EventDirector/NewDivisionWindow.xaml
+++ b/EventDirector/NewDivisionWindow.xaml
@@ -6,12 +6,10 @@
         xmlns:local="clr-namespace:EventDirector"
         mc:Ignorable="d"
         Title="newDivision" Height="160" Width="250">
-    <Grid>
-        <Grid>
-            <Label Content="Name" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top"/>
-            <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
-            <Button Content="Submit" HorizontalAlignment="Left" Margin="20,0,0,25" VerticalAlignment="Bottom" Width="75" Click="Submit_Click"/>
-            <Button Content="Cancel" HorizontalAlignment="Right" Margin="0,0,20,25" VerticalAlignment="Bottom" Width="75" Click="Cancel_Click"/>
-        </Grid>
+    <Grid FocusManager.FocusedElement="{Binding ElementName=nameBox}">
+        <Label Content="Name" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" KeyUp="Keyboard_Up"/>
+        <Button Content="Submit" HorizontalAlignment="Left" Margin="20,0,0,25" VerticalAlignment="Bottom" Width="75" Click="Submit_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Right" Margin="0,0,20,25" VerticalAlignment="Bottom" Width="75" Click="Cancel_Click"/>
     </Grid>
 </Window>
