--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -9,15 +9,19 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File" >
-                <MenuItem Header="Connection _Settings" Click="MenuItem_Click" InputGestureText="Alt+S" Uid="1" />
-                <MenuItem Header="_Race Director Settings" Click="MenuItem_Click" InputGestureText="Alt+R" Uid="2" />
+                <MenuItem Header="_Settings" Click="MenuItem_Click" Uid="1" />
                 <Separator />
-                <MenuItem Header="_Clear Database" Click="MenuItem_Click" InputGestureText="Alt+C" Uid="3" />
+                <MenuItem Header="_Clear Database" Click="MenuItem_Click" Uid="3" />
                 <Separator />
-                <MenuItem Header="_Exit" Click="MenuItem_Click" InputGestureText="Alt+E" Uid="4" />
+                <MenuItem Header="_Exit" Click="MenuItem_Click" Uid="4" />
             </MenuItem>
-            <MenuItem Header="_Import Participants" Click="MenuItem_Click" InputGestureText="Alt+I" Uid="5" />
-            <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" InputGestureText="Alt+A" Uid="6" />
+            <MenuItem Header="Import">
+                <MenuItem Header="_Import Participants (CSV)" Click="MenuItem_Click" Uid="5" />
+            </MenuItem>
+            <MenuItem Header="Event Options">
+                <MenuItem Header="List Participants" Click="MenuItem_Click" Uid="7" />
+                <MenuItem Header="_Assign Bibs/Chips" Click="MenuItem_Click" Uid="6" />
+            </MenuItem>
         </Menu>
         <Grid VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
