Chug chug. Ensured all modify buttons work. Added code to make sure that there are divisions before timing points can be added. Added division names to the timing point window. Ensured we took these divisions into account when adding them to the database. Updated the database with more information. Updated classes to handle this increase in information. Fixed some typos in the database interface class. Fixed an error where TRUNCATE TABLE was used since SQLite doesn't do TRUNCATE. Using DELETE FROM without a WHERE clause. Added code to import from a CSV file.

--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -12,6 +12,7 @@
                 <MenuItem Header="_Settings" Click="MenuItem_Click" Uid="1" />
                 <Separator />
                 <MenuItem Header="_Clear Database" Click="MenuItem_Click" Uid="3" />
+                <MenuItem Header="_Rebuild Database" Click="MenuItem_Click" Uid="2" />
                 <Separator />
                 <MenuItem Header="_Exit" Click="MenuItem_Click" Uid="4" />
             </MenuItem>
