--- a/EventDirector/NewEventWindow.xaml
+++ b/EventDirector/NewEventWindow.xaml
@@ -11,7 +11,7 @@
         <TextBox x:Name="nameBox" HorizontalAlignment="Left" Height="23" Margin="20,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" KeyUp="Keyboard_Up"/>
         <Label Content="Date" HorizontalAlignment="Left" Margin="20,65,20,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="datePicker" HorizontalAlignment="Left" Margin="20,90,0,0" VerticalAlignment="Top" Width="200" KeyUp="Keyboard_Up"/>
-        <Button Content="Submit" HorizontalAlignment="Left" Margin="20,0,0,25" VerticalAlignment="Bottom" Width="75" Click="submit_Click"/>
-        <Button Content="Cancel" HorizontalAlignment="Right" Margin="0,0,20,25" VerticalAlignment="Bottom" Width="75" Click="cancel_Click"/>
+        <Button Content="Submit" HorizontalAlignment="Left" Margin="20,0,0,25" VerticalAlignment="Bottom" Width="75" Click="Submit_Click"/>
+        <Button Content="Cancel" HorizontalAlignment="Right" Margin="0,0,20,25" VerticalAlignment="Bottom" Width="75" Click="Cancel_Click"/>
     </Grid>
 </Window>
