Features, fixes, etc. Added code for serializing and deserializing JSON between client and server. Added code to handle messages from server. Changed how birthday is handled. It's now a string and not a long. Changed how date is handled. It's also a string instead of a long. Server correctly responds to a request for the event list (client_list) Updated windows that relied on functions to generate a viewable date. Updated code that expected longs which are now strings. Added code to get a specific event.

--- a/EventDirector/MainWindow.xaml
+++ b/EventDirector/MainWindow.xaml
@@ -53,7 +53,7 @@
                     <GridView>
                         <GridViewColumn Header="ID" Width="50" DisplayMemberBinding="{Binding Identifier}" />
                         <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}" />
-                        <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding DateStr}" />
+                        <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding Date}" />
                     </GridView>
                 </ListView.View>
             </ListView>
